--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
 	},
 	"dependencies": {
 		"bootstrap-icons": "^1.13.1",
+		"chart.js": "^4.5.1",
+		// "chartjs-adapter-date-fns": "^3.0.0",
+		"chartjs-adapter-moment": "^1.0.1",
+		"date-fns": "^4.1.0",
+		"moment": "^2.30.1",
+		"pinia": "^3.0.4",
 		"vue": "^3.5.24",
 		"vue-router": "^4.6.4"
 	},
