--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
+		"deploy": "gh-pages -d dist",
 		"preview": "vite preview"
 	},
 	"dependencies": {
@@ -15,11 +16,13 @@
 		"date-fns": "^4.1.0",
 		"moment": "^2.30.1",
 		"pinia": "^3.0.4",
+		"vite-svg-loader": "^5.1.0",
 		"vue": "^3.5.24",
 		"vue-router": "^4.6.4"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^6.0.1",
+		"gh-pages": "^6.3.0",
 		"vite": "^7.2.4"
 	}
 }
